# firefox-brand

./: .gitignore  .gitmodules  README.md  config.json
.github/workflows/: release.yml  validate.yml
brands/aurora/: brand-config.json
brands/aurora/mac/glass.icon/: icon.json
brands/nightly/: brand-config.json
brands/nightly/mac/glass.icon/: icon.json
brands/official/: brand-config.json
brands/official/mac/glass.icon/: icon.json
brands/unofficial/: brand-config.json
brands/unofficial/mac/glass.icon/: icon.json
firefox-brand-generator/: Cargo.toml  debug_test.rs
firefox-brand-generator/src/: error.rs  lib.rs  main.rs
firefox-brand-generator/src/config/: loader.rs  mod.rs  types.rs
firefox-brand-generator/src/generator/: engine.rs  filter.rs  mod.rs
firefox-brand-generator/src/image_processing/: loader.rs  mod.rs  rasterizer.rs  resizer.rs  saver.rs
firefox-brand-generator/src/platform/: check.rs  macos.rs  mod.rs
firefox-brand-generator/src/temp/: mod.rs
firefox-brand-generator/src/transformations/: assets_car.rs  copy.rs  copy_preprocess.rs  dsstore.rs  icns.rs  ico.rs  mod.rs  raster.rs  string_replace.rs
firefox-brand-generator/src/utils/: mod.rs  string_processing.rs
static/: configure.sh
static/content/: jar.mn
static/locales/: brand.ftl  brand.properties  jar.mn
static/windows/: firefox.VisualElementsManifest.xml
static/windows/stubinstaller/: branding.nsi  installing-page.css  profile-cleanup-page.css
