[package]
name = "firefox-brand-generator"
version = "0.1.0"
edition = "2024"
description = "CLI tool to generate Firefox brand assets from source files"
license = "MozPL 2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
resvg = "0.45"
tiny-skia = "0.11"
ico = "0.3"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
semver = "1.0"
regex = "1.11.3"
owo-colors = "4.1"
tempfile = "3.10"

[[bin]]
name = "firefox-brand-generator"
path = "src/main.rs"

[lib]
name = "firefox_brand_generator"
path = "src/lib.rs"
